--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -5,5 +5,76 @@ body {
 math-field {
   margin-top: 40px;
   min-width: 150px;
+  max-width: 95%;
   font-size: large;
+}
+
+#copy-box {
+  display: flex;
+  justify-content: center;
+  margin-top: 8px;
+}
+
+#latex-text {
+  margin-right: 5px;
+  font-family: "Arial";
+  max-width: 70%;
+  word-break: break-all;
+}
+
+#copy-button {
+  position: relative;
+  max-height: 20px;
+}
+
+#icon {
+  margin-top: -2px;
+}
+
+#icon:hover {
+  opacity: 0.5;
+  transition: 0.1s;
+}
+
+#icon:active {
+  opacity: 1;
+}
+
+.hidden {
+  display: none;
+}
+
+#copied-text {
+  height: 15px;
+  width: 40px;
+  padding: 3px 10px;
+  border-radius: 6px;
+  font-size: x-small;
+  background: #71e84d;
+  color: rgb(26, 26, 26);
+  text-align: center;
+  position: absolute;
+  right: -20px;
+  bottom: 20px;
+}
+
+.popup-message {
+  animation: popup 3s forwards;
+}
+
+@keyframes popup {
+  0% {
+    transform: translateY(15%);
+    opacity: 0;
+  }
+  10%,
+  90% {
+    transform: none;
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(15%);
+    opacity: 0;
+    pointer-events: none;
+  }
 }
